--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -1914,15 +1914,15 @@ small {
   &.is--opened_in_media_modal {
     .m_media--topbar {
       span {
-        color: white;
+        // color: white;
       }
     }
     figure {
       border: 2px solid @c-gris_fonce;
-      border-top: 0;
+      // border-top: 0;
 
       .m_media--topbar {
-        background-color: @c-gris_fonce;
+        // background-color: @c-gris_fonce;
         border-bottom: 0;
         border-radius: 0;
       }
@@ -2659,9 +2659,9 @@ small {
     }
   }
 
+  &:disabled {
+  }
 }
-
-
 
 .m_captureview {
   display: flex;
@@ -4532,7 +4532,6 @@ small {
                 // border-bottom: 1px solid white;
                 // margin-bottom: -4px;
                 z-index: 2;
-
               }
             }
             label {
